--- a/environment.yml
+++ b/environment.yml
@@ -1,194 +1,42 @@
-name: py36
+name: scipy_np_mpl
 channels:
   - conda-forge
   - anaconda-fusion
   - defaults
 dependencies:
-  - alabaster=0.7.10=py36_0
-  - asn1crypto=0.22.0=py36_0
-  - astroid=1.4.8=py36_0
-  - astropy=3.0.3=py36_1
-  - autovizwidget=0.12.1=py36_0
-  - babel=2.4.0=py36_0
-  - backports.weakref=1.0rc1=py36_0
-  - basemap=1.1.0=py36_2
-  - basemap-data-hires=1.1.0=0
-  - bkcharts=0.2=py36_0
-  - blas=1.1=openblas
-  - bleach=1.5.0=py36_0
-  - bokeh=0.12.6=py36_0
   - ca-certificates=2018.4.16=0
   - certifi=2018.4.16=py36_0
-  - cffi=1.10.0=py36_0
-  - chardet=3.0.4=py36_0
-  - click=6.7=py36_0
-  - cloudpickle=0.4.0=py36_0
-  - colorama=0.3.9=py36_0
-  - cryptography=2.0.3=py36_0
   - cycler=0.10.0=py36_0
-  - dask=0.15.2=py36_0
-  - dask-core=0.15.2=py36_0
-  - decorator=4.1.2=py36_0
-  - dill=0.2.6=py36_0
-  - distributed=1.18.3=py36_0
-  - docutils=0.14=py36_0
-  - entrypoints=0.2.3=py36_1
-  - fastcache=1.0.2=py36hfa6e2cd_0
-  - freetype=2.7=vc14_1
-  - geos=3.5.1=vc14_1
-  - glue-core=0.11.1=py36_0
-  - glue-vispy-viewers=0.8=py36_0
-  - glueviz=0.10.4=1
-  - graphviz=2.38.0=4
-  - h5py=2.7.1=py36_1
-  - hdf5=1.8.18=vc14_0
-  - hdijupyterutils=0.12.1=py36_0
-  - heapdict=1.0.0=py36_0
-  - html5lib=0.9999999=py36_0
-  - icu=58.1=vc14_1
-  - idna=2.5=py36_0
-  - imageio=2.2.0=py36_0
-  - imagesize=0.7.1=py36_0
-  - ipykernel=4.6.1=py36_0
-  - ipython=6.1.0=py36_0
-  - ipython_genutils=0.2.0=py36_0
-  - ipywidgets=7.0.1=py_2
-  - isort=4.2.15=py36_0
-  - jedi=0.10.2=py36_0
-  - jinja2=2.9.6=py36_0
-  - jpeg=9b=vc14_0
-  - jsonschema=2.5.1=py36_0
-  - jupyter_client=5.2.3=py36_0
-  - jupyter_core=4.4.0=py_0
-  - keras=2.0.6=py36_0
-  - lazy-object-proxy=1.3.1=py36_0
-  - libflang=5.0.0=vc14_20180208
-  - libgpuarray=0.7.6=vc14_0
-  - libpng=1.6.28=vc14_0
-  - libsodium=1.0.16=vc14_0
-  - libtiff=4.0.6=vc14_7
-  - llvm-meta=5.0.0=0
-  - locket=0.2.0=py36_1
-  - mako=1.0.7=py36_0
-  - markupsafe=1.0=py36_0
-  - matplotlib=2.0.2=py36_2
-  - mccabe=0.6.1=py36_0
-  - mistune=0.7.4=py36_0
+  - freetype=2.8.1=vc14_0
+  - icu=58.2=vc14_0
+  - jpeg=9b=vc14_2
+  - kiwisolver=1.0.1=py36_1
+  - libpng=1.6.34=vc14_0
+  - matplotlib=2.2.2=py36_1
   - mkl_fft=1.0.2=py36_0
   - mkl_random=1.0.1=py36_0
-  - mock=2.0.0=py36_0
-  - mpl_sample_data=2.0.2=0
-  - mplview=0.0.2=py36_0
-  - mpmath=1.0.0=py_0
-  - msgpack-python=0.4.8=py36_0
-  - nbconvert=5.2.1=py36_1
-  - nbformat=4.3.0=py36_0
-  - networkx=1.11=py36_0
-  - notebook=5.5.0=py36_0
-  - npctypes=0.0.4=py36_0
-  - numpy=1.14.5=py36_blas_openblash8d851b4_200
-  - numpydoc=0.7.0=py36_0
-  - olefile=0.44=py36_0
-  - openblas=0.2.20=vc14_8
-  - openmp=5.0.0=vc14_1
   - openssl=1.0.2o=vc14_0
-  - pandas=0.23.1=py36_0
-  - pandoc=1.19.2=0
-  - pandocfilters=1.4.1=py36_0
-  - partd=0.3.8=py36_0
-  - pbr=3.1.1=py36_0
-  - pickleshare=0.7.4=py36_0
-  - pillow=4.2.1=py36_0
-  - plotly=2.0.15=py36_0
-  - prompt_toolkit=1.0.15=py36_0
-  - protobuf=3.3.2=py36_vc14_0
-  - psutil=5.2.2=py36_0
-  - py=1.4.34=py36_0
-  - pycodestyle=2.3.1=py36_0
-  - pycparser=2.18=py36_0
-  - pyflakes=1.6.0=py36_0
-  - pygments=2.2.0=py36_0
-  - pygpu=0.7.6=py36_0
-  - pylint=1.6.5=py36_0
-  - pyopengl=3.1.1a1=py36_0
-  - pyopenssl=17.2.0=py36_0
+  - pip=9.0.3=py36_0
   - pyparsing=2.2.0=py36_0
-  - pyproj=1.9.5.1=py36_0
-  - pyqt=5.6.0=py36_4
-  - pyshp=1.2.12=py_0
-  - pysocks=1.6.7=py36_0
-  - pytest=3.2.2=py_0
-  - pytest-arraydiff=0.2=py_0
-  - pytest-astropy=0.2.1=py_0
-  - pytest-doctestplus=0.1.2=py_0
-  - pytest-openfiles=0.2.0=py_0
-  - pytest-remotedata=0.3.0=py_0
-  - python-dateutil=2.6.1=py36_0
-  - python-graphviz=0.7.1=py36_0
-  - pytz=2017.2=py36_0
-  - pywavelets=0.5.2=py36_1
-  - pywinpty=0.5.4=py36_0
-  - pyyaml=3.12=py36_1
-  - pyzmq=17.0.0=py36_4
+  - pyqt=5.6.0=py36_5
+  - python=3.6.5=1
+  - python-dateutil=2.7.3=py_0
+  - pytz=2018.5=py_0
   - qt=5.6.2=vc14_1
-  - qtawesome=0.4.4=py36_0
-  - qtconsole=4.3.1=py36_0
-  - qtpy=1.3.1=py36_0
-  - requests=2.18.4=py36_1
-  - rope=0.10.7=py36_0
-  - scikit-image=0.13.0=py36_1
-  - send2trash=1.5.0=py_0
-  - simplegeneric=0.8.1=py36_0
+  - setuptools=39.2.0=py36_0
   - sip=4.18=py36_1
-  - six=1.10.0=py36_1
-  - snowballstemmer=1.2.1=py36_0
-  - sortedcontainers=1.5.7=py36_0
-  - sphinx=1.6.3=py36_0
-  - sphinxcontrib-websupport=1.0.1=py36_0
-  - spyder=3.2.2=py36_0
-  - sqlalchemy=1.1.13=py36_0
-  - sympy=1.1.1=py36_0
-  - tblib=1.3.2=py36_0
-  - tensorflow=1.3.0=py36_0
-  - terminado=0.8.1=py36_0
-  - testpath=0.3.1=py36_0
-  - theano=0.9.0=py36_1
-  - toolz=0.8.2=py36_0
-  - tornado=4.5.2=py36_0
-  - traitlets=4.3.2=py36_0
-  - typing=3.6.2=py36_0
-  - urllib3=1.22=py36_0
+  - six=1.11.0=py36_1
+  - tornado=5.0.2=py36_0
   - vc=14=0
-  - watermark=1.6.1=py36_0
-  - wcwidth=0.1.7=py36_0
-  - webencodings=0.5=py36_0
-  - werkzeug=0.12.2=py_1
-  - widgetsnbextension=3.0.3=py_1
-  - win_inet_pton=1.0.1=py36_1
-  - winpty=0.4.3=4
-  - wrapt=1.10.11=py36_0
-  - xlrd=1.0.0=py36_1
-  - yaml=0.1.6=vc14_0
-  - zeromq=4.2.5=vc14_1
-  - zict=0.1.2=py36_0
+  - vs2015_runtime=14.0.25420=0
+  - wheel=0.31.0=py36_0
+  - wincertstore=0.2=py36_0
   - zlib=1.2.11=vc14_0
   - icc_rt=2017.0.4=h97af966_0
   - intel-openmp=2018.0.3=0
-  - m2w64-gcc-libgfortran=5.3.0=6
-  - m2w64-gcc-libs=5.3.0=7
-  - m2w64-gcc-libs-core=5.3.0=7
-  - m2w64-gmp=6.1.0=2
-  - m2w64-libwinpthread-git=5.0.0.4634.697f757=2
-  - markdown=2.6.9=py36_0
   - mkl=2018.0.3=1
-  - msys2-conda-epoch=20160418=1
+  - numpy=1.14.3=py36h9fa60d3_2
   - numpy-base=1.14.3=py36h5c71026_0
-  - pip=9.0.1=py36_1
-  - pyreadline=2.1=py36_0
-  - python=3.6.2=0
   - scipy=1.1.0=py36h672f292_0
-  - setuptools=27.2.0=py36_1
-  - vs2015_runtime=14.0.25420=0
-  - wheel=0.29.0=py36_0
-prefix: C:\Anaconda3\envs\py36
+prefix: C:\Anaconda3\envs\scipy_np_mpl
 
