--- a/environment.yml
+++ b/environment.yml
@@ -12,6 +12,9 @@ dependencies:
   - jpeg=9b=vc14_2
   - kiwisolver=1.0.1=py36_1
   - libpng=1.6.34=vc14_0
+  - matplotlib=2.2.2=py36_1
+  - mkl_fft=1.0.2=py36_0
+  - mkl_random=1.0.1=py36_0
   - openssl=1.0.2o=vc14_0
   - pip=9.0.3=py36_0
   - pyparsing=2.2.0=py36_0
@@ -32,5 +35,8 @@ dependencies:
   - icc_rt=2017.0.4=h97af966_0
   - intel-openmp=2018.0.3=0
   - mkl=2018.0.3=1
+  - numpy=1.14.3=py36h9fa60d3_2
+  - numpy-base=1.14.3=py36h5c71026_0
+  - scipy=1.1.0=py36h672f292_0
 prefix: C:\Anaconda3\envs\scipy_np_mpl
 
